added a form tag with action to connect to a xampp  localhost database

--- a/results.html
+++ b/results.html
@@ -67,9 +67,10 @@ th{
 	</table>
 
 	<br>
-			
-	<input type="file" value="Attach file" name="a-file"> <br> <br>
-	<input type="submit" value="Send" name="p-name" style="width:50%; height: 35px; font-weight: bold; font-size: 20px;">
+	<form method="POST" target="_blank" action="http://localhost/phpmyadmin/sql.php?server=1&db=parent_info&table=TABLE+1&pos=0">		
+		<input type="file" value="Attach file" name="a-file"> <br> <br>
+		<input type="submit" value="Send" name="p-name" style="width:50%; height: 35px; font-weight: bold; font-size: 20px;">
+	</form>
 	
 	
 
