I have added a regForm for the admin and created some pages

--- a/loginTwo.html
+++ b/loginTwo.html
@@ -16,7 +16,7 @@
 body, html {
     height: 100%;
     background-repeat: no-repeat;
-    background-image: linear-gradient(rgb(137, 182, 111), rgb(165, 167, 54));
+    background-image: linear-gradient(rgb(104, 145, 162), rgb(12, 97, 33));
 }
 
 .card-container.card {
@@ -185,13 +185,11 @@ body, html {
                         <input type="checkbox" value="remember-me"> Remember me
                     </label>
                 </div>
-                <a href="staffDashboard.html"><button class="btn btn-lg btn-primary btn-block btn-signin" type="submit">Sign in</button></a>
+                <a href="info.html"><button class="btn btn-lg btn-primary btn-block btn-signin" type="submit">Sign in</button></a>
             </form><!-- /form -->
             <a href="#" class="forgot-password">
                 Forgot password?
             </a>
-            <br>
-            <a href="fillform.html"><button style="margin-top: 15px; margin-left: 89px; padding: 5px; font-size: 20px;"> Create an account</button></a>
         </div><!-- /card-container -->
     </div><!-- /container -->
 <script type="text/javascript">
