--- a/landing.html
+++ b/landing.html
@@ -8,8 +8,8 @@
     </head>
     <body>
         <div class="content">
-            <h1> Welcome to Fountain University Parent-Institution Dashboard </h1>
-            <a href="login.html"><button>Parent</button></a>
+            <h1> Welcome to Fountain University Parent-Institution Portal</h1>
+            <a href="loginTwo.html"><button>Parent</button></a>
             <a href="login.html"><button>Staff</button></a>
             <a href="admin.html"><button>Admin</button></a>
             <img src="handshake.png" alt="Welcome" width="200px" height="200px">
