--- a/staffDashboard.html
+++ b/staffDashboard.html
@@ -3,10 +3,13 @@
 <head>
 <title>Staff Dashboard</title>
 <meta charset= "utf-8">
-<link rel="stylesheet" href="stylesheet.css" type="text/css">
+<link rel="stylesheet" href="css/stylesheet.css" type="text/css">
 <style>
-
+body{
+	margin: 45px;
+}
 button{
+	margin:5px;
 	padding:10px;
 	width:50%;
 	border:5px solid white;
@@ -18,21 +21,26 @@ button{
 .profile-img-card {
     width: 150px;
     height: 150px;
-    margin: 0 auto 10px;
-    display: block;
+	margin: 0 auto 10px;
+	display: block;
     -moz-border-radius: 50%;
     -webkit-border-radius: 50%;
     border-radius: 50%;
+}
+div{
+	padding-bottom:25px;
 }
 </style>
 </head>
 <body>
 <header class="content">
-	            <img id="profile-img" class="profile-img-card" src="fuo.png" alt="fountain logo" />
+	            <img id="profile-img" class="profile-img-card" src="images/fuo.png" alt="fountain logo" />
   <div>
-	<a href="notify.html"><button>Upload Notification</button></a>
-	<a href="results.html"><button>Upload Student Results</button></a>
-	<a href="#"><button>Student Attendance</button></a>
+	<a href="notify.php"><button>Upload Notification</button></a>
+	<a href="results.php"><button>Upload Student Results</button></a>
+	<a href="attendance.php"><button>Student Attendance</button></a>
+	<a href="enquiry.html"><button>Send Message(s)</button></a>
+	<a href="viewmsg.html"><button>View Message(s)</button></a>
 	
 
 
